--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -120,6 +120,18 @@ jobs:
           docker tag daybook-frontend ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:$IMAGE_TAG
           docker push ${{ secrets.DOCKER_USERNAME }}/daybook-frontend:$IMAGE_TAG
 
+      # 1️⃣6️⃣ Deploy backend to Render with new tag
+     # - name: Deploy backend to Render
+     #   run: |
+     #     curl -fsSL -X POST \
+     #     "${{ secrets.RENDER_BACKEND_HOOK }}?imgURL=docker.io/${{ secrets.DOCKER_USERNAME }}/daybook-backend:${{ github.sha }}"
+
+      # 1️⃣6️⃣ Deploy frontend to Render with new tag
+      - name: Deploy frontend to Render
+        run: |
+          curl -fsSL -X POST \
+          "${{ secrets.RENDER_FRONTEND_HOOK }}?imgURL=docker.io/${{ secrets.DOCKER_USERNAME }}/daybook-frontend:${{ github.sha }}"
+
       # 1️⃣3️⃣ Update K8s manifests with new image tags
       - name: Update Kubernetes Manifests
         run: |
